Update scoring week 3

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="tab" onclick="showTab('women')">Women</div>
                     <div class="tab" onclick="showTab('kids')">Kids</div>
                     <div class="tab" onclick="showTab('workouts')">Workouts</div>
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfVfgW0o4czFThVy1EJrkipItMFvCFRTUlFCbwyCAwBfUbecg/closedform" target="_blank" class="score-entry-button">Enter Score</a>
+                    <a href="https://forms.gle/fzqG786UrmjbCauq5" target="_blank" class="score-entry-button">Enter Score</a>
                 </div>
             </div>
             <div class="sponsor-column">
